# git-worktree-manager

./: .pre-commit-config.yaml  Cargo.toml  README.md  gwm-completion.bash
.github/: dependabot.yml
.github/chainguard/: dev-jml-driftlessaf-pr-agent.sts.yaml  dev-jml-driftlessaf-pr-validator.sts.yaml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/commands/: add.rs  cleanup.rs  complete_branches.rs  complete_repos.rs  completion.rs  gc.rs  list.rs  mod.rs  prune.rs  remove.rs  show_wip.rs  switch.rs  sync.rs
src/core/: mod.rs
src/git/: mod.rs
src/github/: mod.rs
src/output/: mod.rs  table.rs
tests/: integration_tests.rs
