[package]
name = "gwm"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "An opinionated git worktree management tool"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
regex = "1.0"
futures = "0.3"
tabled = "0.20"
git2 = "0.19"
octocrab = "0.42"
chrono = "0.4"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"

[lints.rust]
warnings = "deny"
